[package]
name = "itmo_compmath"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "lab1"
path = "src/linear-equasions-solver.rs"

[[bin]]
name = "lab2"
path = "src/non-linear-equasions-solver.rs"

[[bin]]
name = "lab3"
path = "src/inegration.rs"

[[bin]]
name = "lab4"
path = "src/approximation.rs"

[dependencies]
plotters = "0.3.1"
