[package]
name = "itmo_compmath"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

build-std = ["thiserror_impl"]


[[bin]]
name = "prob"
path = "src/probability-theory.rs"

[[bin]]
name = "lab1"
path = "src/linear-equasions-solver.rs"

[[bin]]
name = "lab2"
path = "src/non-linear-equasions-solver.rs"

[[bin]]
name = "lab3"
path = "src/inegration.rs"

[[bin]]
name = "lab4"
path = "src/approximation.rs"

[[bin]]
name = "lab5"
path = "src/interpolation.rs"

[[bin]]
name = "lab6"
path = "src/differential-equasions.rs"

[dependencies]
plotters = "0.3.3"
plotters-bitmap = "0.3.3"

